# werwolf2

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  TODO  flake.nix  fly.toml  nixpacks.toml
bindings/: LobbySettings.ts  Player.ts  ToClient.ts  ToServer.ts
schemas/: to_client.json  to_server.json
server/: Cargo.toml
server/src/: lobby.rs  main.rs  message.rs  utils.rs
server/src/roles/: doppel.rs  dorfbewohner.rs  freimaurer.rs  gunstling.rs  unruhestifterin.rs  werwolf.rs
src/: controller.rs  game.rs  gen_ts.rs  lobby.rs  main.rs  message.rs  server.rs  utils.rs
src/chat/: mod.rs
src/roles/: dieb.rs  doppel.rs  dorfbewohner.rs  freimaurer.rs  gunstling.rs  mod.rs  schlaflose.rs  seherin.rs  unruhestifterin.rs  werwolf.rs
types/: types.t
web/: .pnp.cjs  api_types.ts  gen-ts.js  generate_api_types.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  login.tsx  message-zod.ts  message.ts
web/src/api/: chatSession.ts  gameSession.ts
web/src/chat/: index.tsx  login.tsx
web/src/game/: index.tsx  messages.tsx  players.tsx  settings.tsx
web/src/utils/: useSubject.ts
