[package]
authors = ["Bodokat <bod.kato@gmail.com>"]
edition = "2018"
name = "werwolf"
version = "0.1.0"

[dependencies]
async-trait = "0.1"
dotenv = "0.15"
dyn-clone = "1.0"
futures = "0.3"
itertools = "0.10.0"
rand = "0.8"
tokio = { version = "1.6", features = ["rt-multi-thread"] }
tokio-stream = "0.1"


[dependencies.serenity]
version = "0.10.7"
features = ["unstable_discord_api"]
